# news-report-agent

./: .gitignore  AGENTS.md  CLAUDE.md  EXPERT_SUPERVISOR.md  PHASE2_SUMMARY.md  PHASE4_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  TECHNICAL_DESIGN.md  TESTING_GUIDE.md  check_env.py  env.example  llm-council.md  pyproject.toml  start-backend.sh  start-frontend.sh
cli/: __init__.py  main.py
docs/: EXPERT_COUNCIL_DESIGN.md  PROJECT_GUIDE.md
docs/archive/: IMPLEMENTATION_PLAN.md  PHASE3_SUMMARY.md  PHASE5_SUMMARY.md  PHASE_ALL_COMPLETE.md  README.md  plan.md
docs/background/: README.md
docs/reference/: AGENT_FLOW.md  DATETIME_CONTEXT.md  README.md
scripts/: test_tracer.py
src/: __init__.py  config.py
src/agent/: __init__.py  master.py
src/prompts/: __init__.py  experts.py  master.py
src/schemas/: __init__.py  base.py  outputs.py  query_understanding.py
src/tools/: __init__.py  evaluator.py  scraper.py  search.py
src/utils/: __init__.py  callbacks.py  logger.py  templates.py  tracer.py
tests/: conftest.py  test_config.py  test_deepagents_basic.py  test_models.py
tests/agent/: __init__.py  test_datetime_context.py  test_master.py  test_subagents.py  test_supervisor.py
tests/cli/: test_main.py
tests/integration/: __init__.py  test_e2e.py
tests/tools/: __init__.py  test_evaluator.py  test_scraper.py  test_search.py  test_sources.py
tests/utils/: __init__.py  test_templates.py
webui/: README.md
webui/backend/: README.md  main.py  requirements.txt  sse_handler.py
webui/frontend/: index.html  package-lock.json  package.json
(+26 files in other folders)
